# flet-spinkit1

./: .gitignore  404.html  README.md  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
FletSpinkit1/: index.html
docs/: FletSpinkit1.md  index.md
examples/flet_spinkit1_example/: pyproject.toml
examples/flet_spinkit1_example/src/: main.py
src/flet_spinkit1/: __init__.py  flet_spinkit1.py
src/flutter/flet_spinkit1/: README.md  pubspec.yaml
src/flutter/flet_spinkit1/lib/: flet_spinkit1.dart
src/flutter/flet_spinkit1/lib/src/: create_control.dart  flet_spinkit1.dart
